--- a/todo/src/main/resources/application-prod.properties
+++ b/todo/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 # PostgreSQL Database Settings (for 'prod' profile)
 # Use an environment variable for the DB host to allow for Docker networking.
 # Defaults to 'localhost' for local runs outside of Docker.
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/greetings_db
-spring.datasource.username=springuser
-spring.datasource.password=password
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 # Disable Swagger UI in the 'prod' environment for security
