--- a/todo/src/main/resources/application-prod.properties
+++ b/todo/src/main/resources/application-prod.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Disable Swagger UI in the 'prod' environment for security
 springdoc.api-docs.enabled=false
+
+# Set the default profile to 'prod' for production
+spring.profiles.active=prod
+
+# Default CORS origins for local development
+cors.allowed-origins=https://demo-web-app-navy.vercel.app
