updated app properties for  dev fallback

--- a/todo/src/main/resources/application-prod.properties
+++ b/todo/src/main/resources/application-prod.properties
@@ -1,3 +1,10 @@
+# Disable Swagger UI in the 'prod' environment for security
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
+
+# Default CORS origins for local development
+cors.allowed-origins=https://demo-web-app-navy.vercel.app
+
 # PostgreSQL Database Settings (for 'prod' profile)
 # Use an environment variable for the DB host to allow for Docker networking.
 # Defaults to 'localhost' for local runs outside of Docker.
@@ -5,12 +12,3 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-
-# Disable Swagger UI in the 'prod' environment for security
-springdoc.api-docs.enabled=false
-
-# Set the default profile to 'prod' for production
-spring.profiles.active=prod
-
-# Default CORS origins for local development
-cors.allowed-origins=https://demo-web-app-navy.vercel.app
