--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -1,13 +1,2 @@
-# Common Application Settings
-spring.application.name=todo
-server.port=8080
-management.endpoints.web.exposure.include=health
-
-# Set the default profile to 'dev' for local development
+# Default profile
 spring.profiles.active=dev
-
-# General JPA settings (applies to all profiles)
-spring.jpa.show-sql=true
-
-# Default CORS origins for local development
-cors.allowed-origins=http://localhost:3000,http://localhost:5174
