--- a/todo/src/main/resources/application-dev.properties
+++ b/todo/src/main/resources/application-dev.properties
@@ -1,3 +1,17 @@
+# Common Application Settings
+spring.application.name=todo
+server.port=8080
+management.endpoints.web.exposure.include=health
+
+# Set the default profile to 'dev' for local development
+spring.profiles.active=dev
+
+# General JPA settings (applies to all profiles)
+spring.jpa.show-sql=true
+
+# Default CORS origins for local development
+cors.allowed-origins=http://localhost:3000,http://localhost:5174
+
 # H2 Database Settings (for 'dev' profile)
 spring.datasource.url=jdbc:h2:mem:greetings_db
 spring.datasource.driverClassName=org.h2.Driver
